# api/openapi/oas_handlers_gen.go
@@ -2564,7 +2564,7 @@ func (s *Server) handleListComponentsRequest(args [1]string, argsEscaped bool, w
 
 	var rawBody []byte
 
-	var response []Component
+	var response *ListComponentsOKHeaders
 	if m := s.cfg.Middleware; m != nil {
 		mreq := middleware.Request{
 			Context:          ctx,
@@ -2593,7 +2593,7 @@ func (s *Server) handleListComponentsRequest(args [1]string, argsEscaped bool, w
 		type (
 			Request  = struct{}
 			Params   = ListComponentsParams
-			Response = []Component
+			Response = *ListComponentsOKHeaders
 		)
 		response, err = middleware.HookMiddleware[
 			Request,
@@ -2724,7 +2724,7 @@ func (s *Server) handleListGenerationsRequest(args [1]string, argsEscaped bool, 
 
 	var rawBody []byte
 
-	var response []Generation
+	var response *ListGenerationsOKHeaders
 	if m := s.cfg.Middleware; m != nil {
 		mreq := middleware.Request{
 			Context:          ctx,
@@ -2753,7 +2753,7 @@ func (s *Server) handleListGenerationsRequest(args [1]string, argsEscaped bool, 
 		type (
 			Request  = struct{}
 			Params   = ListGenerationsParams
-			Response = []Generation
+			Response = *ListGenerationsOKHeaders
 		)
 		response, err = middleware.HookMiddleware[
 			Request,
